[package]
name = "stock_messages"
version = "0.1.0"
authors = ["Anand Aravindan <anand.anand84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.5.0"
bytes = "0.4.11"

[build-dependencies]
prost-build = { version = "0.5.0" }